Add Spring Boot Actuator dependency and configure management endpoints